added all the section

--- a/g3.css
+++ b/g3.css
@@ -7,3 +7,213 @@
   font-weight: 400;
   font-style: normal;
 }
+/* shared  styles */
+.display-flex {
+    display: flex;
+}
+.text-gray{
+    color: #424242;
+}
+.text-lightgray{
+    color: #727272;
+}
+.Section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.10);
+}
+.btn-primary{
+    background-color: orange;
+    color: white;
+    padding: 20px 25px;
+    font-size: 1rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 8px;
+}
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main > section{
+    margin-top: 120px;
+}
+.text-primary{
+    color: orange;
+}
+/* header styles */
+
+/* navbar related styles */
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+}
+.brand{
+    font-weight: bold;
+    font-size: 2.4rem;
+}
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+/* banner related style */
+
+.banner-content{
+    max-width: 860px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 2.5rem;
+}
+.banner-title{
+    font-weight: bold;
+    font-size: 3.6rem;
+}
+.banner-img{
+    max-width: 100%;
+}
+/* team and feature related style */
+.teams{
+    align-items: center;   
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+#quick-list{
+    font-weight: 500;
+}
+/* f section styles */
+#id{
+    border-left: 5px solid orange;
+    padding-left: 21px;
+}
+.features{
+    gap: 140px;
+    align-items: center;
+}
+.feature-card {
+    padding: 30px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+.feature-card .feature-title {
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.feature-architect img {
+    width: 100%;
+}
+
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -150px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+/* some fact related style */
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.fact-card{
+    border: 1.5px solid orange;
+    width: 200px;
+    height: 200px;
+    border-radius: 8px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    
+}
+.fact-number{
+    font-size: 2rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-top: 10px;
+}
+.fact-description{
+    max-width: 540px;
+}
+/* sponsor related style */
+.Sponspor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+.footer{
+    max-width: 1440px;
+    margin: 0 auto;
+    font-size: 1rem;
+    color: #424242;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    padding: 20px 250px;
+}
+
+/* responsive media query */
+@media screen and (max-width: 576px) {
+    .navbar, 
+    .nav-links, 
+    .teams, .features
+    {
+        flex-direction: column;
+    }
+    .team-img-container, .facts-container, .sponsor-companies{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .our-features{
+        margin-left: 30px;
+    }
+    .facts-container, .sponsor-companies{
+        gap: 24px;
+        justify-items: center;
+    }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+
+    }
+    .footer{
+        padding: 1px 1px;
+        
+    }
+}
+
